tests/enums/faulty_generics.sy
Maybe :: enum(*A)
    Just *A,
    Other *A,
    Nothing,
end

start :: fn do
    a := Maybe.Just 1
    a = Maybe.Other "abc"
end

// error: $Mismatch
